# AI_BackEnd

./: main.py  pyproject.toml
app/ai/: data_crawling.py
app/api/: api.py
app/api/endpoints/: stock.py
app/api/response_models/: jongmok_list.py  sise_data.py
app/crud/: crud_event.py  crud_price.py
app/db/: mysql_connect.py
app/models/: event.py  price.py
app/schemas/: event.py  price.py
