[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["asdf148 <wnduf0405_@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
