[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["asdf148 <wnduf0405_@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
fastapi-utils = "^0.2.1"
pandas = "^1.4.2"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.0"
statsmodels = "^0.13.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
